# eyepop-sdk-python

./: .env.example  .gitignore  .mcp.json  API_CURL_EXAMPLES.md  ARCHITECTURE.md  CHANGELOG.md  COMPUTE_API_RUNBOOK.md  DEBUG.md  LICENSE  PLAN.md  README.md  TODO.md  Taskfile.yml  cookbook.ipynb  example.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  setup.py  test_output.txt
.claude/: settings.json
.claude/skills/eyepop-sdk/: SKILL.md
.codex/: config.toml
.github/workflows/: checks.yaml  checks.yml  integration.yml  python-publish.yaml  python-publish.yml  session-smoke.yml  test-pypi-publish.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_requirements.md
examples/: README.md  auth_session.py  caption_demo.py  change_pipeline.py  create_dataset.py  create_dataset_and_train.py  download_video.py  example-notebook.ipynb  import_dataset.py  infer_demo.py  live_rtmp_stream.py  load_from.py  load_from_url_timing.py  load_video_from_http.py  multi_image_group_demo.py  pop_demo.ipynb  pop_demo.py  relay_example.py  requirements.txt  simple_person_detection.py  upload.py  upload_image.py  upload_image_timing.py  upload_streaming.py  upload_video.py  viewer.html  visualize_on_image.py  visualize_pop.ipynb  visualize_pop.py  visualize_pop_alias.py  visualize_transient.py  visualize_with_webui2.py  vlm_demo.py  vlm_embed_demo.py  workflow_cli.py
examples/experimental/: create_dataset_and_train.py  create_dataset_and_train_sync.py  import_model_and_alias.py  start_workflow.py  wait_for.py  wait_for_sync.py
examples/experimental/sample_assets/: sample_assets.json
eyepop/: __init__.py  client_event.fbs  client_session.py  endpoint.py  exceptions.py  eyepopsdk.py  jobs.py  load_balancer.py  logging.py  metrics.py  periodic.py  request_tracer.py  settings.py  syncify.py  visualize.py
eyepop/compute/: __init__.py  api.py  context.py  models.py  responses.py  status.py
eyepop/data/: data_endpoint.py  data_jobs.py  data_normalize.py  data_syncify.py  data_top_k.py  data_types.py
eyepop/data/arrow/: schema.py  schema_0_0.py  schema_1_0.py  schema_1_1.py  schema_1_2.py  schema_1_3.py  schema_1_4.py  schema_1_5.py  schema_1_6.py  schema_1_7.py  schema_version_conversion.py  streaming.py
eyepop/data/arrow/eyepop/: annotations.py  assets.py  predictions.py
eyepop/data/arrow/pandas/: assets.py
eyepop/data/types/: __init__.py  asset.py  common.py  dataset.py  enums.py  events.py  model.py  prediction.py  vlm.py  workflow.py
eyepop/events/: ClientType.py  Event.py  Method.py  Record.py  Result.py
eyepop/worker/: worker_client_session.py  worker_endpoint.py  worker_jobs.py  worker_syncify.py  worker_types.py
scripts/: session_smoke.py
tests/: base_endpoint_test.py  conftest.py  test_compute_api.py  test_compute_api_integration.py  test_compute_models.py  test_compute_status.py  test_compute_token_refresh.py  test_endpoint_connect.py  test_endpoint_load.py  test_endpoint_load_balance.py  test_endpoint_pop_comp.py  test_endpoint_post_transform.py  test_endpoint_retry.py  test_endpoint_sandbox.py  test_endpoint_upload.py  test_endpoint_upload_stream.py  test_persist_validation.py
tests/data/: arrow_test_helpers.py  base_endpoint_test.py  test_arrow_to_from_annotation.py  test_arrow_to_from_pandas.py  test_arrow_to_from_prediction.py  test_endpoint_connect.py  test_endpoint_dataset_ops.py  test_endpoint_no_tracing.py  test_filter_prediction_top_k.py  test_prediction.py
tests/data/files/: prediction_0_bbox.json  prediction_10_classes.json  prediction_10_classes_10_objects.json  prediction_10_objects.json  prediction_11_timestamp.json  prediction_12_texts.json  prediction_1_bbox.json  prediction_1_embeddings.json  prediction_2_bbox.json  prediction_2_keypoints.json  prediction_2_keypoints_2_objects.json  prediction_2_keypoints_with_category.json  prediction_2_objects_category_texts.json  prediction_3_classes.json  prediction_4_bbox_and_classes.json
tests/integration/: __init__.py  test_upload_group.py  test_worker_endpoint.py
tests/worker/: base_endpoint_test.py  test_endpoint_connect.py  test_endpoint_load.py  test_endpoint_load_balance.py  test_endpoint_load_from_group.py  test_endpoint_pop.py  test_endpoint_pop_comp.py  test_endpoint_post_transform.py  test_endpoint_retry.py  test_endpoint_sandbox.py  test_endpoint_upload.py  test_endpoint_upload_group.py  test_endpoint_upload_stream.py  test_endpoint_upload_stream_group.py
