[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eyepop*"]
exclude = ["tmp*", "tests*", "examples*", "scripts*", "compute-examples*"]

[project]
name = "eyepop"
dynamic = ["version"]
description="EyePop.ai Python SDK"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "EyePop.ai", email = "support@eyepop.ai" },
]
requires-python = ">= 3.12"

keywords=["EyePop", "AI", "ML", "CV"]
dependencies = [
    "aiohttp~=3.13.1",
    "matplotlib~=3.10.7",
    "cryptography~=46.0.3",
    "flatbuffers~=25.9.23",
    "deprecated~=1.2.18",
    "pydantic~=2.12.3",
    "pydantic-settings~=2.0.0",
    "websockets~=15.0.1",
    "pyarrow~=21.0.0",
    "pandas~=2.3.3",
    "python-dotenv~=1.1.1",
]

[project.urls]
Homepage = "https://github.com/eyepop-ai/eyepop-sdk-python"
Repository = "https://github.com/eyepop-ai/eyepop-sdk-python"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "codecov",
    "pre-commit",
    "aioresponses"
]
doc = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings[python]",
    "mkdocs-material",
    "Pygments",
]
example = [
    "pyqt5",
    "webui2",
    "pybars3"
]
dev = [
    "build~=1.3.0",
    "twine~=6.2.0",
    "mypy~=1.13.0",
    "types-aiofiles",
    "types-Pillow",
]
all = ["eyepop[test,doc,example,dev]"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
[tool.coverage.run]
source = ["eyepop"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
eyepop = ["py.typed"]

[tool.setuptools_scm]
version_file = "eyepop/_version.py"
local_scheme = "no-local-version"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_error_context = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "PIL.*",
    "webui.*",
    "pybars.*",
    "flatbuffers.*",
]
ignore_missing_imports = true
