[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "importlib"
]
build-backend = "setuptools.build_meta"

[project]
name = "eyepop"
version = "3.4.0"
description="EyePop.ai Python SDK"
readme = "README.md"
license.file = "./LICENSE"
authors = [
    { name = "EyePop.ai", email = "support@eyepop.ai" },
]
requires-python = ">= 3.12"

keywords=["EyePop", "AI", "ML", "CV"]
dependencies = [
    "aiohttp~=3.13.1",
    "build~=1.3.0",
    "twine~=6.2.0",
    "matplotlib~=3.10.7",
    "cryptography~=46.0.3",
    "flatbuffers~=25.9.23",
    "deprecated~=1.2.18",
    "pydantic~=2.12.3",
    "deprecated~=1.2.18",
    "websockets~=15.0.1",
    "pyarrow~=21.0.0",
    "pandas~=2.3.3",
]

[project.urls]
Homepage = "https://github.com/eyepop-ai/eyepop-sdk-python"
Repository = "https://github.com/eyepop-ai/eyepop-sdk-python"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "codecov",
    "pre-commit",
    "aioresponses"
]
doc = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings[python]",
    "mkdocs-material",
    "Pygments",
]
example = [
    "pyqt5",
    "webui2",
    "pybars3"
]
all = ["eyepop[test,doc,example]"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
[tool.coverage.run]
source = ["eyepop"]
