[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eyepop*"]
exclude = ["tmp*", "tests*", "examples*", "scripts*", "compute-examples*"]

[project]
name = "eyepop"
dynamic = ["version"]
description="EyePop.ai Python SDK"
readme = "README.md"
license = "MIT"
authors = [
    { name = "EyePop.ai", email = "support@eyepop.ai" },
]
requires-python = ">= 3.12"

keywords=["EyePop", "AI", "ML", "CV"]
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "cryptography>=42.0.0,<47.0.0",
    "deprecated>=1.2.0,<2.0.0",
    "flatbuffers>=24.0.0,<26.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow>=17.0.0,<22.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "websockets>=13.0.0,<16.0.0",
]

[project.urls]
Homepage = "https://github.com/eyepop-ai/eyepop-sdk-python"
Repository = "https://github.com/eyepop-ai/eyepop-sdk-python"

[project.optional-dependencies]
test = [
    "aioresponses>=0.7.8",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "codecov",
    "pre-commit",
    "parameterized>=0.9.0"
]
doc = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings[python]",
    "mkdocs-material",
    "Pygments",
]
example = [
    "pyqt5",
    "webui2",
    "pybars3",
    "python-dotenv",
    "aiofiles==25.1.0",
    "auth0-python>=4.13.0"
]
dev = [
    "build>=1.0.0,<2.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.6.0,<1.0.0",
    "types-aiofiles",
    "types-Pillow",
]
all = ["eyepop[test,doc,example,dev]"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
[tool.coverage.run]
source = ["eyepop"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
eyepop = ["py.typed"]

[tool.setuptools_scm]
version_file = "eyepop/_version.py"
local_scheme = "no-local-version"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "PIL.*",
    "webui.*",
    "pybars.*",
    "flatbuffers.*",
]
ignore_missing_imports = true
